Refactor... extract a string literal to strings.xml.

--- a/PlantPlaces14FS/res/values/strings.xml
+++ b/PlantPlaces14FS/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="lblPlantName">Plant Name</string>
     <string name="lblBlank"></string>
     <string name="lblSearch">Search</string>
+    <string name="button_clicked">Button Clicked</string>
 
 </resources>
