--- a/PlantPlaces14FS/res/values/strings.xml
+++ b/PlantPlaces14FS/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">PlantPlaces14FS</string>
+    <string name="app_name">Plant Places</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="lblLatitude">Latitude</string>
